--- a/client/index.html
+++ b/client/index.html
@@ -3,14 +3,29 @@
 
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Bid on and sell items from the browser game Hordes.io here!">
+
+    <!-- meta tags for other stuffs -->
+ <meta name="twitter:card" content="Bid on and sell items from the browser game Hordes.io here!">
+ <meta name="twitter:site" content="@LegusX">
+ <meta name="twitter:title" content="Hordes.Auction">
+ <meta name="twitter:description" content="Page description less than 200 characters">
+ <meta name="twitter:image" content="http://www.example.com/image.jpg">
+ 
+ <meta property="og:title" content="Hordes.Auction" />
+ <meta property="og:type" content="website" />
+ <meta property="og:url" content="https://hordes.auction" />
+ <!-- <meta property="og:image" content="http://example.com/image.jpg" /> -->
+ <meta property="og:description" content="The place to buy and sell items from Hordes.io for the best prices" />
+ <meta property="og:site_name" content="Hordes.Auction" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Hordes.Auction</title>
 </head>
 
 <body>
