setting up sign in page

--- a/login/index.html
+++ b/login/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="List items on the market">
+    <meta name="description" content="Bid on and sell items from the browser game Hordes.io here!">
 
     <!-- meta tags for other stuffs -->
     <meta name="twitter:card" content="Bid on and sell items from the browser game Hordes.io here!">
@@ -25,13 +25,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title>Item Lister - Hordes.Auction</title>
+    <title>Hordes.Auction</title>
 </head>
 
 <body>
     <!-- header -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Hordes.Auction</a>
+        <a class="navbar-brand" href="#">Hordes.Auction</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,17 +40,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" href="/">Home</a>
+                    <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/buy">Buy</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sell</a>
+                    <a class="nav-link" href="/sell">Sell</a>
                 </li>
             </ul>
-            <button class="btn btn-outline-success my-2 my-sm-0" href="/login">Sign in</button>
         </div>
+        <button class="btn btn-outline-success my-2 my-sm-0" href="/login">Sign in</button>
     </nav>
 
     <!-- Optional JavaScript -->
