--- a/client/buy/index.html
+++ b/client/buy/index.html
@@ -49,10 +49,7 @@
                     <a class="nav-link" href="/sell">Sell</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Item Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            <button class="btn btn-outline-success my-2 my-sm-0" href="/login">Sign in</button>
         </div>
     </nav>
 
