--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,6 @@
     <meta name="twitter:card" content="Bid on and sell items from the browser game Hordes.io here!">
     <meta name="twitter:site" content="@LegusX">
     <meta name="twitter:title" content="Hordes.Auction">
-    <meta name="twitter:description" content="Page description less than 200 characters">
     <meta name="twitter:image" content="http://www.example.com/image.jpg">
 
     <meta property="og:title" content="Hordes.Auction" />
@@ -49,10 +48,11 @@
                     <a class="nav-link" href="/sell">Sell</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
+            <!-- <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Item Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            </form> -->
+            <button class="btn btn-outline-success my-2 my-sm-0" href="/login">Sign in</button>
         </div>
     </nav>
     go buy stuff please
