--- a/base.html
+++ b/base.html
@@ -50,7 +50,7 @@
                 </li>
             </ul>
         </div>
-        <button class="btn btn-outline-success my-2 my-sm-0" href="/login">Sign in</button>
+        <form><button formaction="/login" class="btn btn-outline-success my-2 my-sm-0" onclick="location.href='/login'">Sign in</button></form>
     </nav>
 
     <!-- Optional JavaScript -->
