--- a/client/index.html
+++ b/client/index.html
@@ -52,7 +52,7 @@
                 <input class="form-control mr-sm-2" type="search" placeholder="Item Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form> -->
-            <button class="btn btn-outline-success my-2 my-sm-0" href="/login">Sign in</button>
+            <form><button formaction="/login" class="btn btn-outline-success my-2 my-sm-0" onclick="location.href='/login'">Sign in</button></form>
         </div>
     </nav>
     go buy stuff please
