--- a/client/login/index.html
+++ b/client/login/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title>Hordes.Auction</title>
+    <title>Log in - Hordes.Auction</title>
 </head>
 
 <body>
@@ -40,7 +40,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/buy">Buy</a>
@@ -50,7 +50,7 @@
                 </li>
             </ul>
         </div>
-        <button class="btn btn-outline-success my-2 my-sm-0" href="/login">Sign in</button>
+        <button class="btn btn-outline-success my-2 my-sm-0">Sign in</button>
     </nav>
 
     <!-- Optional JavaScript -->
