--- a/client/sell/index.html
+++ b/client/sell/index.html
@@ -49,7 +49,7 @@
                     <a class="nav-link" href="#">Sell</a>
                 </li>
             </ul>
-            <button class="btn btn-outline-success my-2 my-sm-0" href="/login">Sign in</button>
+            <form><button formaction="/login" class="btn btn-outline-success my-2 my-sm-0" onclick="location.href='/login'">Sign in</button></form>
         </div>
     </nav>
 
