--- a/client/login/index.html
+++ b/client/login/index.html
@@ -25,6 +25,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
+    <!-- google oauth stuff -->
+    <meta name="google-signin-client_id" content="409948744767-7cota7fak01vimkdrae2jvrj5jq43quj.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+    <script src="index.js"></script>
+
     <title>Log in - Hordes.Auction</title>
 </head>
 
@@ -64,6 +70,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
     </script>
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
 </body>
 
 </html>
