this page is so ugly

--- a/client/signup/index.html
+++ b/client/signup/index.html
@@ -67,7 +67,8 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
     </script>
 </body>
-<div class="row align-items-center justify-content-center centerbox" width=50vw height=40vh>
+<!-- <div class="row align-items-center justify-content-center centerbox" width=50vw height=40vh> -->
+<div>
     To finish signing up, please choose a display name:
     <input id="displayname" type="text">
     NOTE: This name will be seen by other users of the website
