More work towards getting sign up finished

--- a/client/signup/index.html
+++ b/client/signup/index.html
@@ -69,11 +69,13 @@
 </body>
 <!-- <div class="row align-items-center justify-content-center centerbox" width=50vw height=40vh> -->
 <div>
-    To finish signing up, please choose a display name:
+    <p>To finish signing up, please choose a display name:</p>
     <input id="displayname" type="text">
-    NOTE: This name will be seen by other users of the website
-    Also, I highly recommend you make this similar to your Hordes.io name to help people better recognize you. Entirely
-    up to you though.
+    <p>NOTE: This name will be seen by other users of the website</p>NOTE
+    <p>Also, I highly recommend you make this similar to your Hordes.io name to help people better recognize you. Entirely
+    up to you though.</p>
+    <button id="signup">Sign Up</button>
+    <p>Insert random legal junk here at some point in the future probably</p>
 </div>
 
 </html>
