that would be helpful

--- a/client/signup/index.html
+++ b/client/signup/index.html
@@ -27,6 +27,7 @@
     <title>Hordes.Auction</title>
 
     <link rel="stylesheet" href="/everything.css">
+    <src src="index.js"></src>
 </head>
 
 <body>
@@ -71,7 +72,7 @@
 <div>
     <p>To finish signing up, please choose a display name:</p>
     <input id="displayname" type="text">
-    <p>NOTE: This name will be seen by other users of the website</p>NOTE
+    <p>NOTE: This name will be seen by other users of the website</p>
     <p>Also, I highly recommend you make this similar to your Hordes.io name to help people better recognize you. Entirely
     up to you though.</p>
     <button id="signup">Sign Up</button>
