--- a/client/signup/index.html
+++ b/client/signup/index.html
@@ -27,7 +27,7 @@
     <title>Hordes.Auction</title>
 
     <link rel="stylesheet" href="/everything.css">
-    <src src="index.js"></src>
+    <script src="index.js"></script>
 </head>
 
 <body>
