I think this should be almost the end of sign in stuff

--- a/client/signup/index.html
+++ b/client/signup/index.html
@@ -71,7 +71,7 @@
 <!-- <div class="row align-items-center justify-content-center centerbox" width=50vw height=40vh> -->
 <div>
     <p>To finish signing up, please choose a display name:</p>
-    <input id="displayname" type="text">
+    <input id="displayname" type="text" max="12" min="3">
     <p>NOTE: This name will be seen by other users of the website</p>
     <p>Also, I highly recommend you make this similar to your Hordes.io name to help people better recognize you. Entirely
     up to you though.</p>
