--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <title>Hordes.Auction</title>
+    <script src="profile.js"></script>
 </head>
 
 <body>
