--- a/client/sell/index.html
+++ b/client/sell/index.html
@@ -26,6 +26,7 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <title>Item Lister - Hordes.Auction</title>
+    <script src="profile.js"></script>
 </head>
 
 <body>
@@ -49,7 +50,16 @@
                     <a class="nav-link" href="#">Sell</a>
                 </li>
             </ul>
-            <form><button formaction="/login" class="btn btn-outline-success my-2 my-sm-0" onclick="location.href='/login'">Sign in</button></form>
+            <form id="loginbutton"><button formaction="/login" class="btn btn-outline-success my-2 my-sm-0" onclick="location.href='/login'">Sign in</button></form>
+            <li class="nav-item dropdown" id="userDropdown" style='display: none;'>
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Username goes here</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Profile</a>
+                    <a class="dropdown-item" href="#">My Auctions</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="/signout">Sign Out</a>
+                  </div>
+            </li>
         </div>
     </nav>
 
