Seeing if I can kick people out of the parts of the website they ain't supposed to be in

--- a/client/index.html
+++ b/client/index.html
@@ -65,7 +65,7 @@
             </li>
         </div>
     </nav>
-    go buy stuff please
+    You literally can't do anything except create an account, so if you're hoping for more, don't.
 
     <!-- Beginning of main page carousels (Trending/new/etc) -->
     <!-- That is, if I ever figure out how to get them to work -->
