--- a/client/sell/index.html
+++ b/client/sell/index.html
@@ -27,6 +27,7 @@
 
     <title>Item Lister - Hordes.Auction</title>
     <script src="profile.js"></script>
+    <meta name="restricted" content="true">
 </head>
 
 <body>
