--- a/client/buy/index.html
+++ b/client/buy/index.html
@@ -26,7 +26,7 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <title>Item Browser - Hordes.Auction</title>
-    <script src="profile.js"></script>
+    <script src="/profile.js"></script>
 </head>
 
 <body>
