--- a/client/buy/index.html
+++ b/client/buy/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Bid on and sell items from the browser game Hordes.io here!">
+    <meta name="description" content="Browse items for sale">
 
     <!-- meta tags for other stuffs -->
     <meta name="twitter:card" content="Bid on and sell items from the browser game Hordes.io here!">
@@ -17,8 +17,7 @@
     <meta property="og:title" content="Hordes.Auction" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://hordes.auction" />
-    <!-- <meta property="og:image" content="http://example.com/image.jpg" /> -->
-    <meta property="og:description" content="The place to buy and sell items from Hordes.io for the best prices" />
+    <meta property="og:description" content="Browse items for sale" />
     <meta property="og:site_name" content="Hordes.Auction" />
 
     <!-- Bootstrap CSS -->
