--- a/client/sell/index.html
+++ b/client/sell/index.html
@@ -25,6 +25,7 @@
 
     <title>Item Lister - Hordes.Auction</title>
     <script src="/profile.js"></script>
+    <script src="index.js"></script>
     <meta name="restricted" content="true">
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -83,8 +84,8 @@
     <form>
         <div class="form-group">
             <label for="itemid" data-toggle="tooltip" data-placement="top"
-                title="These are displayed on with your item stats when you hover over them in game">Item ID #</label>
-            <input type="text" class="form-control" id="itemid" placeholder="123456789" max="9" min="9" pattern="[0-9]">
+                title="These are displayed with your item stats when you hover over the item in game">Item ID #</label>
+            <input type="text" class="form-control" id="itemid" placeholder="123456789">
         </div>
         <button id="checkid" type="button" class="btn btn-primary">Check ID</button>
     </form>
