--- a/client/sell/index.html
+++ b/client/sell/index.html
@@ -25,7 +25,7 @@
 
     <title>Item Lister - Hordes.Auction</title>
     <script src="/profile.js"></script>
-    <script src="index.js"></script>
+    <script src="/index.js"></script>
     <meta name="restricted" content="true">
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
