--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,9 @@
     <meta property="og:description" content="The place to buy and sell items from Hordes.io for the best prices" />
     <meta property="og:site_name" content="Hordes.Auction" />
 
+    <!-- Adsense -->
+    <script data-ad-client="ca-pub-8488418873527228" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
