--- a/client/sell/index.html
+++ b/client/sell/index.html
@@ -80,15 +80,13 @@
             </li>
         </div>
     </nav>
-
-    <form>
         <div class="form-group">
             <label for="itemid" data-toggle="tooltip" data-placement="top"
                 title="These are displayed with your item stats when you hover over the item in game">Item ID #</label>
             <input type="text" class="form-control" id="itemid" placeholder="123456789">
         </div>
         <button id="checkid" type="button" class="btn btn-primary">Check ID</button>
-    </form>
+    <p id="testing"></p>
 </body>
 
 </html>
