--- a/client/sell/index.html
+++ b/client/sell/index.html
@@ -86,6 +86,7 @@
             <input type="text" class="form-control" id="itemid" placeholder="123456789">
         </div>
         <button id="checkid" type="button" class="btn btn-primary">Check ID</button>
+    <p>Hydrated Item Data: </p>
     <p id="testing"></p>
 </body>
 
