--- a/client/sell/index.html
+++ b/client/sell/index.html
@@ -98,9 +98,9 @@
         <button id="checkid" type="button" class="btn btn-primary">Check ID</button>
     </div>
     <div id="listitem" class="container" style="display:none;">
-        <dic class="row">
-            <div class="container col-lg" style="background-color: lightgrey;">
-                <div class="row">
+        <div class="row">
+            <div class="container col-lg">
+                <div class="row container" style="background-color: lightgrey;">
                     <div class="col-sm">
                         <h3 id="name">Stupid name</h3>
                         <h4 id="typetier">other stupid stuff</h4>
@@ -114,19 +114,28 @@
                 </div>
                 <div class="form-group container col-lg">
                     <label for="itemprice">Starting Bid Price:</label>
-                    <input id="itemprice" type="number" min="0" max="2147483645" class="form-control input-sm" style="width:60%;display:inline;">
+                    <input id="itemprice" type="number" min="0" max="2000000000" value="0" class="form-control input-sm" style="width:60%;display:inline;">
                     <img src="/assets/question.png" style="height:20px;width:20px" data-toggle="tooltip" data-placement="top" title="This is the minimum amount your item can sell for."><br>
                     <label for="bidinc">Minimum bid requirement:</label>
-                    <input id="bidinc" type="number" min="0" max="1000" class="form-control input-sm" style="width:48%;display:inline;">
+                    <input id="bidinc" type="number" min="0" max="10000" value="0" class="form-control input-sm" style="width:48%;display:inline;">
                     <img src="/assets/question.png" style="height:20px;width:20px" data-toggle="tooltip" data-placement="top" title="All bids made on your item must be equal to or greater than this amount"><br>
                     <label for="date">Auction end date:</label>
                     <input id="date" type="date" class="form-control input-sm" style="width:60%;display:inline;">
                     <img src="/assets/question.png" style="height:20px;width:20px" data-toggle="tooltip" data-placement="top" title="All auctions end at 11:59 PM GMT-6"><br>
                     <button class="btn btn-primary" type="button" id="listbutton">List Item</button>
                     <h5 id="warning" style="color:red;display:none;">random text go here</h5>
+                    <br>
+                    <br>
+                    <div class="container">
+                        <h5>Keep in mind that:</h5>
+                        <h6>1 Gold = 100 Silver</h6>
+                        <h6>1 Silver = 100 Copper</h6>
+                        <h6>1 Gold = 10000 Copper</h6>
+                        <h6>All prices you enter are in Copper.</h6>
+                    </div>
                 </div>
             </div>
-    </div>
+        </div>
 </body>
 
 </html>
